fixed home screen alignment and updated the offer card images to a slideshow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -73,8 +73,10 @@
 
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 0 40px;
+  justify-content: center;
+  /* padding: 0 40px; */
+  width: 100%;
+  padding: 40px 0 0 0;
 }
 
 /* CSS for the Side Navigation bar on home page */
@@ -85,11 +87,17 @@
 .side-navbar-container {
   grid-column: 1;
   align-self: start;
-  padding: 20px;
-  margin-left: 40px;
+  padding: 0 20px 20px 20px;
+  /* margin-left: 40px; */
 
   position: relative;
   width: 15%;
+}
+
+.content-container {
+  width: 50%;
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -105,7 +113,7 @@
 
 #side-nav-bar .side-nav-bar-button {
   position: relative;
-  width: 180px;
+  width: 100%;
   height: 40px;
   font-size: 22px;
   padding: 8px;
@@ -130,7 +138,7 @@
 /* CSS for flight booking section */
 .flight-booking-section {
   position: relative;
-  margin: 60px 0px;
+  margin: 22px 0px 60px 0px;
   padding: 60px;
   padding-left: 60px;
   border: 1px solid #E6E6E6;
@@ -484,11 +492,11 @@
 .card-container {
   display: flex;
   flex-direction: column;
-  width: 240px;
+  width: 100%;
   height: 150px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 20px;
+  padding: 10px 0 10px 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin: 10px;
 }
@@ -507,6 +515,7 @@
   font-size: 14px;
   font-weight: 500;
   margin-bottom: 10px;
+  text-wrap: wrap;
 }
 
 .know-more {
@@ -529,21 +538,48 @@
   position: relative;
   grid-column: 3;
   align-self: start;
-  margin: 20px;
-  margin-right: 40px;
+  margin: 12px 20px 20px 20px;
+  /* margin-right: 40px; */
+  height: 350px;
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+
+  >.card-container-img{
+    width: 100%;
+    height: 150px;
+    margin-left: 15px;
+    border-radius: 10px;
+    overflow: hidden;
+
+    >img{
+      max-height: 150px;
+    }
+  }
 }
 
-.card-image {
+/* .card-image {
   position: absolute;
-}
+} */
 
-.card-container-img {
-  margin-left: 20px;
-}
+/* .card-container-img {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+} */
 
-.card-container-img>.img-container img {
-  max-width: 240px;
-  max-height: 240px;
+.img-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  >img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 .app-download-div {
@@ -557,7 +593,7 @@
 /* CSS for Hotel Booking Section */
 .hotel-booking-section {
   position: relative;
-  margin: 60px 0px;
+  margin: 22px 0px 60px 0px;
   padding: 60px;
   padding-left: 60px;
   border: 1px solid #E6E6E6;
@@ -3728,7 +3764,7 @@
 }
 
 .footer-section {
-  width: 70%;
+  width: 80%;
   height: 80%;
 }
 
@@ -3743,8 +3779,8 @@
   width: 20%;
 
   >svg {
-    width: 250px;
-    height: 100px;
+    width: 200px;
+    height: 80px;
   }
 }
 
@@ -3790,6 +3826,11 @@
   display: flex;
   gap: 5px;
 
+  >span,
+  a {
+    font-size: 13px;
+  }
+
   >a {
     text-decoration: none;
   }
@@ -3802,6 +3843,11 @@
 .social-anchor {
   display: flex;
   gap: 10px;
+
+  >span,
+  a {
+    font-size: 13px;
+  }
 }
 
 
@@ -4346,18 +4392,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     /* margin-left: 3px; */
 
-    >.card-container-img {
-      margin: 0;
+    /* >.card-container-img {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
 
       >.image-container {
+        width: 100%;
+        height: 150px;
+        overflow: hidden;
 
         >img {
-          position: relative;
+          min-width: 100%;
         }
       }
-    }
+    } */
   }
 
   .app-download-div {
@@ -5206,7 +5258,8 @@
     gap: 15px;
     padding: 10px 0;
 
-    >.payment-successful , .payment-failure{
+    >.payment-successful,
+    .payment-failure {
       font-size: 20px;
     }
 
@@ -5214,7 +5267,7 @@
       font-size: 18px;
     }
 
-    >.failure-navlink .failure-button{
+    >.failure-navlink .failure-button {
       font-size: 18px;
     }
 
@@ -5286,3 +5339,15 @@
     }
   }
 }
+
+
+.card-image{
+  min-width: 100%;
+  /* min-height: 150px; */
+}
+
+/* .card-add-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+} */
